--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
+    "d3": "^5.9.1",
+    "d3-axis": "latest",
+    "d3-scale": "latest",
+    "d3-selection": "latest",
+    "hchs-vue-charts": "^1.2.8",
     "vue": "^2.5.22",
+    "vue-chart": "^2.0.0",
     "yarn-install": "^1.0.0"
   },
   "devDependencies": {
